[gd_scene load_steps=32 format=3 uid="uid://dydpakooi7hib"]

[ext_resource type="Script" path="res://script/Enemy/spirit.gd" id="1_1qk1r"]
[ext_resource type="Shader" path="res://art/Shader/Blink.gdshader" id="1_ba6y5"]
[ext_resource type="Texture2D" uid="uid://cdmhv1hu5a4pb" path="res://art/Enemies/Spirit/summonIdle.png" id="3_jk66f"]
[ext_resource type="PackedScene" uid="uid://kje7vcoucwfe" path="res://scenes/Box/hurt_box.tscn" id="4_jpkqr"]
[ext_resource type="Texture2D" uid="uid://ddpykgcgqo0ve" path="res://art/Shadows/SmallShadow.png" id="4_puyqj"]
[ext_resource type="PackedScene" uid="uid://0cgjopmw7jb4" path="res://scenes/Box/hit_box.tscn" id="5_0jn6h"]
[ext_resource type="PackedScene" uid="uid://d3q5a0ppcdkug" path="res://scenes/Box/stats.tscn" id="6_6y36m"]
[ext_resource type="Texture2D" uid="uid://c4pfohrmn4j1j" path="res://art/Effects/Particle/particle.png" id="8_fdaa2"]
[ext_resource type="Script" path="res://script/Enemy/gun.gd" id="9_yhtvu"]
[ext_resource type="PackedScene" uid="uid://ccmoo6ivwuk2g" path="res://scenes/Enemy/blackFire.tscn" id="10_cplqu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p4fea"]
shader = ExtResource("1_ba6y5")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_cejoi"]
atlas = ExtResource("3_jk66f")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdmx8"]
atlas = ExtResource("3_jk66f")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x81j"]
atlas = ExtResource("3_jk66f")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdrmu"]
atlas = ExtResource("3_jk66f")
region = Rect2(150, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_kfr63"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cejoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdmx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x81j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdrmu")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2epm6"]
radius = 6.08276

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rj6wb"]
radius = 2.0
height = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sv5x2"]
radius = 201.122

[sub_resource type="CircleShape2D" id="CircleShape2D_mfrx3"]
radius = 6.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ypx1f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_di7k6"]
bg_color = Color(0.329412, 0.678431, 0.552941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mck7v"]
bg_color = Color(0.2, 0.2, 0.2, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_41kt2"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_coq8p"]
resource_name = "Blink"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_01e47"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_shava"]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1yqu6"]
_data = {
"Blink": SubResource("Animation_coq8p"),
"RESET": SubResource("Animation_01e47"),
"default": SubResource("Animation_shava")
}

[sub_resource type="Curve" id="Curve_y43vi"]
_data = [Vector2(0, 0.35061), 0.0, 0.0, 0, 0, Vector2(0.14, 0.992886), 0.0, 0.0, 0, 0, Vector2(1, 0.221545), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_76uvy"]
curve = SubResource("Curve_y43vi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ydccq"]
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.3
scale_curve = SubResource("CurveTexture_76uvy")

[node name="Spirit" type="CharacterBody2D"]
process_mode = 1
collision_layer = 514
collision_mask = 513
script = ExtResource("1_1qk1r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_p4fea")
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_kfr63")
autoplay = "default"

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("4_puyqj")

[node name="HurtBox" parent="." instance=ExtResource("4_jpkqr")]
collision_layer = 1024
collision_mask = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_2epm6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
rotation = -1.56543
shape = SubResource("CapsuleShape2D_rj6wb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8388608
collision_mask = 8388608

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_sv5x2")
debug_color = Color(0.756863, 0.380392, 0.643137, 0.419608)

[node name="HitBox" parent="." instance=ExtResource("5_0jn6h")]
collision_layer = 8
collision_mask = 8
damage = 3

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_mfrx3")

[node name="Stats" parent="." instance=ExtResource("6_6y36m")]
maxHealt = 3

[node name="HPBar" type="ProgressBar" parent="."]
z_index = 10
z_as_relative = false
offset_left = -13.0
offset_top = -31.0
offset_right = 12.0
offset_bottom = -27.0
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxEmpty_ypx1f")
theme_override_styles/fill = SubResource("StyleBoxFlat_di7k6")
value = 60.0
show_percentage = false
metadata/_edit_group_ = true

[node name="DamageBar" type="ProgressBar" parent="HPBar"]
z_index = 8
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_mck7v")
theme_override_styles/fill = SubResource("StyleBoxFlat_41kt2")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="HPBar"]
wait_time = 0.4
one_shot = true

[node name="Ambiente" type="AudioStreamPlayer2D" parent="."]
autoplay = true
max_distance = 100.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
max_distance = 100.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1yqu6")
}
autoplay = "default"

[node name="Origin" type="Node2D" parent="."]
position = Vector2(0, -12)

[node name="PathFinding" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="PathFinding"]
debug_path_custom_color = Color(0, 0.615262, 0.615703, 1)

[node name="PathTimer" type="Timer" parent="PathFinding"]
wait_time = 0.3
autostart = true

[node name="HitParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -6)
amount = 6
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_ydccq")
texture = ExtResource("8_fdaa2")
lifetime = 0.3
one_shot = true
preprocess = 0.03
explosiveness = 0.8
randomness = 0.59
local_coords = true

[node name="Gun" type="Node2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5379
script = ExtResource("9_yhtvu")
bullet = ExtResource("10_cplqu")
arc = 10.0
fire_rate = 0.5

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="HPBar/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PathFinding/PathTimer" to="." method="_on_path_timer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
